--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -33,11 +33,8 @@
 </p>
 </div>
 <p>FreeCAD je neust&aacute;le vyv&iacute;jen, tak&#382;e n&#283;kter&eacute; informace mohou b&yacute;t ne&uacute;pln&eacute; nebo zastaral&eacute;. Pokud nem&#367;&#382;ete naj&iacute;t informace, kter&eacute; pot&#345;ebujete, nev&aacute;hejte se zeptat na <a rel="nofollow" class="external text" href="https://forum.freecad.org">FreeCAD forum</a>.
+</p><p>Pokud byste cht&#283;li p&#345;isp&#283;t k FreeCADu, pros&iacute;m <a href="../Donate.html" title="Donate">p&#345;isp&#283;jte</a> a pod&iacute;vejte se na str&aacute;nku <a href="../Help_FreeCAD.html" title="Help FreeCAD">Pomozte FreeCADu</a> kde najdete dal&scaron;&iacute; zp&#367;soby, jak p&#345;isp&#283;t. Pokud byste cht&#283;li editovat tuto wiki, p&#345;e&#269;t&#283;te si <a href="../WikiPages.html" title="WikiPages">WikiPages</a> kde najdete obecn&eacute; pokyny, kter&eacute; byste m&#283;li dodr&#382;ovat.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If you'd like to contribute to FreeCAD, please <a href="../Donate.html" title="Donate">donate</a>, and see the <a href="../Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> page for other ways to contribute. If you'd like to edit this wiki read the <a href="../WikiPages.html" title="WikiPages">WikiPages</a> for the general guidelines that you should follow.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If you would like to know how FreeCAD started years ago visit the <a href="../History.html" title="History">History</a> page.
 </p>
@@ -230,13 +227,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115152646
+Cached time: 20260115152759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 318/1000000
+CPU time usage: 0.131 seconds
+Real time usage: 0.215 seconds
+Preprocessor visited node count: 317/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
 Highest expansion depth: 5/100
@@ -246,17 +243,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.371      1 -total
- 65.56%   15.977      1 Template:Userdocnavi/cs
- 34.75%    8.469      1 Template:Navigation_menu_2
-  9.27%    2.259      3 Template:Version
-  7.83%    1.909      1 Template:TOCright
-  5.03%    1.225      5 Template:Incode
-  4.75%    1.157      2 Template:VersionMinus
-  3.96%    0.965      1 Template:Button
+100.00%   14.971      1 -total
+ 34.71%    5.196      1 Template:Userdocnavi/cs
+ 17.93%    2.685      5 Template:Incode
+ 15.27%    2.286      1 Template:Navigation_menu_2
+ 13.54%    2.027      3 Template:Version
+  9.79%    1.466      1 Template:Button
+  9.12%    1.365      2 Template:VersionMinus
+  7.98%    1.194      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152646 and revision id 1738745. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152759 and revision id 1738747. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
