--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (10% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/User_hub.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1062;&#1077;&#1085;&#1090;&#1098;&#1088; &#1079;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/User_hub.html" class="mw-pt-progress mw-pt-progress--high" title="&#1062;&#1077;&#1085;&#1090;&#1088; &#1087;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1081; (84% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/User_hub.html" class="mw-pt-progress mw-pt-progress--low" title="User hub (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -37,11 +37,7 @@
 </p><p>Pokud v&aacute;s zaj&iacute;m&aacute;, jak FreeCAD p&#345;ed lety vznikl, nav&scaron;tivte str&aacute;nku <a href="../History.html" title="History">Historie</a>.
 </p><p><span id="Using_FreeCAD"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<p>A m&aacute;te-li n&#283;jak&eacute; poznatky, kter&eacute; byste r&aacute;di vid&#283;li i zde, nen&iacute; d&#367;vod abyste nep&#345;isp&#283;li a nepomohli n&aacute;m tento manu&aacute;l vylep&scaron;it. P&#345;ejd&#283;te na str&aacute;nku  <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">N&aacute;pov&#283;da FreeCADu</a> , kter&aacute; V&aacute;m s t&iacute;m pom&#367;&#382;e za&#269;&iacute;t. 
-</p>
 <h2><span id="Pou.C5.BEit.C3.AD_FreeCADu"></span><span class="mw-headline" id="Pou&#382;it&iacute;_FreeCADu">Pou&#382;it&iacute; FreeCADu</span></h2>
-</div>
 <p><span id="Introduction"></span>
 </p>
 <h3><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h3>
@@ -223,13 +219,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115152904
+Cached time: 20260115153533
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.216 seconds
-Preprocessor visited node count: 316/1000000
+CPU time usage: 0.103 seconds
+Real time usage: 0.161 seconds
+Preprocessor visited node count: 314/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
 Highest expansion depth: 5/100
@@ -239,17 +235,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.657      1 -total
- 47.72%    9.380      1 Template:Userdocnavi/cs
- 14.27%    2.806      1 Template:Navigation_menu_2
- 10.92%    2.146      3 Template:Version
- 10.22%    2.008      1 Template:TOCright
-  9.52%    1.871      5 Template:Incode
-  8.49%    1.669      2 Template:VersionMinus
-  6.45%    1.268      1 Template:Button
+100.00%   15.151      1 -total
+ 42.43%    6.428      1 Template:Userdocnavi/cs
+ 18.42%    2.791      1 Template:Navigation_menu_2
+ 14.79%    2.241      2 Template:VersionMinus
+ 11.19%    1.695      3 Template:Version
+  9.62%    1.458      5 Template:Incode
+  8.40%    1.272      1 Template:TOCright
+  8.26%    1.252      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115152903 and revision id 1738749. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115153533 and revision id 1738751. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
