--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -41,12 +41,12 @@
 <p><span id="Introduction"></span>
 </p>
 <h3><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">O aplikaci</a>: Z&aacute;kladn&iacute; p&#345;ehled FreeCADu</li>
-<li><a href="../cs/Installing.html" class="mw-redirect" title="Installing/cs">Instalace</a>: Jak instalovat FreeCAD na <a href="../cs/Install_on_Windows.html" class="mw-redirect" title="Install on Windows/cs">Windows</a>, <a href="../cs/Install_on_Unix.html" class="mw-redirect" title="Install on Unix/cs">Unix/Linux</a> a <a href="../cs/Install_on_Mac.html" class="mw-redirect" title="Install on Mac/cs">Mac</a></li>
-<li><a href="../cs/Getting_started.html" title="Getting started/cs">Za&#269;&iacute;n&aacute;me</a>: Rychl&yacute; p&#345;ehled dostupn&yacute;ch n&aacute;stroj&#367;</li>
-<li><a href="../index.php?title=Frequently_asked_questions/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Frequently asked questions/cs (page does not exist)">FAQ</a>: &#268;asto kladen&eacute; ot&aacute;zky</li></ul>
-</div>
+<ul><li><a href="../About_FreeCAD.html" title="About FreeCAD">Popis aplikace</a>: Obecn&yacute; p&#345;ehled o programu FreeCAD</li>
+<li>Instalace: Jak nainstalovat FreeCAD na <a href="../Installing_on_Windows.html" title="Installing on Windows">Windows</a>, <a href="../Installing_on_Linux.html" title="Installing on Linux">Linuxu</a> a <a href="../Installing_on_Mac.html" title="Installing on Mac">Macu</a></li>
+<li><a href="../Installing_additional_components.html" title="Installing additional components">Instalace dopl&#328;kov&yacute;ch komponent&#367;</a>: Jak nainstalovat dal&scaron;&iacute; komponenty t&#345;et&iacute;ch stran, kter&eacute; mohou spolupracovat s FreeCADem.</li>
+<li><a href="../Getting_started.html" title="Getting started">Za&#269;&iacute;n&aacute;me</a>: Stru&#269;n&yacute; p&#345;ehled dostupn&yacute;ch n&aacute;stroj&#367;</li>
+<li><a href="../Frequently_asked_questions.html" title="Frequently asked questions">FAQ</a>: &#268;asto kladen&eacute; dotazy</li>
+<li><a href="../Tutorials.html" title="Tutorials">N&aacute;vody</a> pokr&yacute;vaj&iacute;c&iacute; r&#367;zn&eacute; oblasti programu FreeCAD</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span id="Migrating_from_other_software.3F"></span><span class="mw-headline" id="Migrating_from_other_software?">Migrating from other software?</span></h4>
 </div>
@@ -219,12 +219,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115153533
+Cached time: 20260115154234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.161 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.203 seconds
 Preprocessor visited node count: 314/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
@@ -235,17 +235,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.151      1 -total
- 42.43%    6.428      1 Template:Userdocnavi/cs
- 18.42%    2.791      1 Template:Navigation_menu_2
- 14.79%    2.241      2 Template:VersionMinus
- 11.19%    1.695      3 Template:Version
-  9.62%    1.458      5 Template:Incode
-  8.40%    1.272      1 Template:TOCright
-  8.26%    1.252      1 Template:Button
+100.00%   12.449      1 -total
+ 40.13%    4.996      1 Template:Userdocnavi/cs
+ 18.71%    2.330      1 Template:Navigation_menu_2
+ 12.85%    1.600      1 Template:TOCright
+ 11.24%    1.399      5 Template:Incode
+  9.79%    1.219      3 Template:Version
+  9.78%    1.218      2 Template:VersionMinus
+  9.58%    1.193      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115153533 and revision id 1738751. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154234 and revision id 1738753. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
