--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -47,9 +47,9 @@
 <li><a href="../Getting_started.html" title="Getting started">Za&#269;&iacute;n&aacute;me</a>: Stru&#269;n&yacute; p&#345;ehled dostupn&yacute;ch n&aacute;stroj&#367;</li>
 <li><a href="../Frequently_asked_questions.html" title="Frequently asked questions">FAQ</a>: &#268;asto kladen&eacute; dotazy</li>
 <li><a href="../Tutorials.html" title="Tutorials">N&aacute;vody</a> pokr&yacute;vaj&iacute;c&iacute; r&#367;zn&eacute; oblasti programu FreeCAD</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h4><span id="Migrating_from_other_software.3F"></span><span class="mw-headline" id="Migrating_from_other_software?">Migrating from other software?</span></h4>
-</div>
+<p><span id="Migrating_from_other_software?"></span>
+</p>
+<h4><span id="P.C5.99ech.C3.A1z.C3.ADte_z_jin.C3.A9ho_softwaru.3F"></span><span class="mw-headline" id="P&#345;ech&aacute;z&iacute;te_z_jin&eacute;ho_softwaru?">P&#345;ech&aacute;z&iacute;te z jin&eacute;ho softwaru?</span></h4>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Workarounds.html" title="Workarounds">Workarounds</a></li>
 <li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrating to FreeCAD from Fusion360</a></li>
@@ -219,12 +219,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115154234
+Cached time: 20260115154307
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.203 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.369 seconds
 Preprocessor visited node count: 314/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
@@ -235,17 +235,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.449      1 -total
- 40.13%    4.996      1 Template:Userdocnavi/cs
- 18.71%    2.330      1 Template:Navigation_menu_2
- 12.85%    1.600      1 Template:TOCright
- 11.24%    1.399      5 Template:Incode
-  9.79%    1.219      3 Template:Version
-  9.78%    1.218      2 Template:VersionMinus
-  9.58%    1.193      1 Template:Button
+100.00%   30.079      1 -total
+ 21.87%    6.578      2 Template:VersionMinus
+ 18.83%    5.663      5 Template:Incode
+ 18.41%    5.537      1 Template:Userdocnavi/cs
+ 17.52%    5.270      1 Template:TOCright
+ 13.56%    4.078      3 Template:Version
+  7.28%    2.189      1 Template:Navigation_menu_2
+  4.76%    1.431      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154234 and revision id 1738753. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154307 and revision id 1738755. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
