--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -75,9 +75,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standardn&iacute; n&aacute;stroje</a>. Tyto p&#345;&iacute;kazy a n&aacute;stroje jsou k dispozici ve v&scaron;ech pracovn&iacute;ch prost&#345;ed&iacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Kombinuje Arch Workbench a d&#345;&iacute;ve extern&iacute; BIM Workbench, kter&yacute; byl k dispozici ve <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a> is used to produce G-Code instructions. This workbench was called "Path Workbench" in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../CAM_Workbench.html" title="CAM Workbench">Pracovn&iacute; plocha CAM</a> se pou&#382;&iacute;v&aacute; k vytv&aacute;&#345;en&iacute; instrukc&iacute; G-k&oacute;du. Tato pracovn&iacute; plocha se naz&yacute;vala "Path Workbench" v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> contains 2D tools and basic 2D and 3D CAD operations.</li></ul>
 </div>
@@ -200,13 +198,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115161359
+Cached time: 20260115161759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.162 seconds
-Preprocessor visited node count: 321/1000000
+CPU time usage: 0.103 seconds
+Real time usage: 0.168 seconds
+Preprocessor visited node count: 320/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -216,17 +214,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.026      1 -total
- 32.78%    4.925      1 Template:Userdocnavi/cs
- 15.93%    2.394      7 Template:Incode
- 13.77%    2.069      1 Template:Button
- 13.35%    2.006      1 Template:TOCright
- 13.35%    2.006      1 Template:Navigation_menu_2
-  9.64%    1.448      3 Template:Version
-  6.85%    1.030      2 Template:VersionMinus
+100.00%   17.896      1 -total
+ 49.21%    8.807      1 Template:Userdocnavi/cs
+ 17.25%    3.087      1 Template:Navigation_menu_2
+ 13.23%    2.368      7 Template:Incode
+ 11.08%    1.983      1 Template:TOCright
+  8.64%    1.547      1 Template:Button
+  7.98%    1.428      3 Template:Version
+  5.10%    0.912      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115161358 and revision id 1738777. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115161759 and revision id 1738779. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
